--- a/Gameverse/Site.Master
+++ b/Gameverse/Site.Master
@@ -7,7 +7,7 @@
     <title>Gameverse</title>
     <link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="Assets/CSS/custom.css" rel="stylesheet" type="text/css" />
-    <link href="Bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" />
+    <script src="Assets/JS/jquery-2.2.0.min.js"></script>
     <script src="Bootstrap/js/bootstrap.min.js"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
