--- a/Gameverse/Site.Master
+++ b/Gameverse/Site.Master
@@ -32,6 +32,7 @@
                         <li><a href="contact.aspx">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="register.aspx">Register</a></li>
                         <li><a>My Account</a></li>
                         <li><a>My Cart</a></li>
                     </ul>
