--- a/Gameverse/Site.Master
+++ b/Gameverse/Site.Master
@@ -26,16 +26,34 @@
                     </button>
                 </div>
                 <div class="navbar-collapse collapse" id="navbar-main">
-                    <ul class="nav navbar-nav">
+                    <!--<ul class="nav navbar-nav">
                         <li><a>Products</a></li>
                         <li><a href="Code/about.aspx">About</a></li>
                         <li><a href="Code/contact.aspx">Contact</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="Code/register.aspx">Register</a></li>
-                        <li><a>My Account</a></li>
-                        <li><a>My Cart</a></li>
-                    </ul>
+                    </ul>-->
+                    <div class="navbar-right">
+                        <div class="navbar-form" role="search" id="navbar-menu">
+                            <asp:TextBox ID="txtSearrh" runat="server" CssClass="form-control" Placeholder="Search for games" Width="400"></asp:TextBox>
+                            <asp:LinkButton ID="btnSearch" runat="server" CssClass="btn btn-default">
+                                <span class="glyphicon glyphicon-search"> </span>
+                            </asp:LinkButton>
+                        </div>
+                        <ul class="nav navbar-nav">
+                            <li><a href="Code/register.aspx">Sign in</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Gameverse <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#"> My Account</a></li>
+                                    <li><a href="#"> My Orders</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#"><span class="glyphicon glyphicon-wrench"></span>  Settings</a></li>
+                                    <li><a href="Code/about.aspx"><span class="glyphicon glyphicon-hand-up"></span>  About</a></li>
+                                    <li><a href="#"><span class="glyphicon glyphicon-log-out"></span>  Logout</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">My Cart</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
