--- a/Gameverse/Site.Master
+++ b/Gameverse/Site.Master
@@ -5,6 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title>Gameverse</title>
+    <link rel="icon" type="image/png" href="Assets/Images/LogoGrey.png"/>
     <link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="Assets/CSS/custom.css" rel="stylesheet" type="text/css" />
     <script src="Assets/JS/jquery-2.2.0.min.js"></script>
@@ -26,11 +27,20 @@
                     </button>
                 </div>
                 <div class="navbar-collapse collapse" id="navbar-main">
-                    <!--<ul class="nav navbar-nav">
-                        <li><a>Products</a></li>
-                        <li><a href="Code/about.aspx">About</a></li>
-                        <li><a href="Code/contact.aspx">Contact</a></li>
-                    </ul>-->
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#"> All</a></li>
+                                <li><a href="#"> New Releases</a></li>
+                                <li><a href="#"> Featured</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#"> Playstation 4</a></li>
+                                <li><a href="#"> Xbox One</a></li>
+                                <li><a href="#"> Wii U</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                     <div class="navbar-right">
                         <div class="navbar-form" role="search" id="navbar-menu">
                             <asp:TextBox ID="txtSearrh" runat="server" CssClass="form-control" Placeholder="Search for games" Width="400"></asp:TextBox>
@@ -51,7 +61,7 @@
                                     <li><a href="#"><span class="glyphicon glyphicon-log-out"></span>  Logout</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">My Cart</a></li>
+                            <li><a href="#"><span class="glyphicon glyphicon-shopping-cart btn-lg"></span></a></li>
                         </ul>
                     </div>
                 </div>
