--- a/Gameverse/Site.Master
+++ b/Gameverse/Site.Master
@@ -49,7 +49,7 @@
                             </asp:LinkButton>
                         </div>
                         <ul class="nav navbar-nav">
-                            <li><a href="Code/register.aspx">Sign in</a></li>
+                            <li><a href="Code/register.aspx">Sign up</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Gameverse <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
