--- a/Gameverse/Assets/CSS/custom.css
+++ b/Gameverse/Assets/CSS/custom.css
@@ -60,3 +60,7 @@ th, td {
     background-color: grey !important;
     border-color: grey !important;
 }
+
+#listProducts{
+    margin-top: 30px;
+}
