--- a/Gameverse/Site.Master
+++ b/Gameverse/Site.Master
@@ -53,12 +53,14 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Gameverse <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#"> My Account</a></li>
+                                    <%--<li><a href="#"> My Account</a></li>
                                     <li><a href="#"> My Orders</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#"><span class="glyphicon glyphicon-wrench"></span>  Settings</a></li>
-                                    <li><a href="Code/about.aspx"><span class="glyphicon glyphicon-hand-up"></span>  About</a></li>
-                                    <li><a href="#"><span class="glyphicon glyphicon-log-out"></span>  Logout</a></li>
+                                    <li class="divider"></li>--%>
+                                    <li><a href="../Code/login.aspx"><span class="glyphicon glyphicon-log-in"></span>  Login</a></li>
+                                    <li><a href="#"><span class="glyphicon glyphicon-usd"></span>  My Orders</a></li>
+                                    <li><a href="../Code/settings.aspx"><span class="glyphicon glyphicon-wrench"></span>  Settings</a></li>
+                                    <li><a href="../Code/about.aspx"><span class="glyphicon glyphicon-hand-up"></span>  About</a></li>
+                                    <li><a href="../Code/login.aspx"><span class="glyphicon glyphicon-log-out"></span>  Logout</a></li>
                                 </ul>
                             </li>
                             <li><a href="#"><span class="glyphicon glyphicon-shopping-cart btn-lg"></span></a></li>
