--- a/Gameverse/Site.Master
+++ b/Gameverse/Site.Master
@@ -29,22 +29,34 @@
                 <div class="navbar-collapse collapse" id="navbar-main">
                     <ul class="nav navbar-nav">
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games<b class="caret"></b></a>
+                            <ul class="dropdown-menu" role="menu">
                                 <li><a href="../Code/listProducts.aspx"> All</a></li>
                                 <li><a href="../Code/listProducts.aspx?filter=NewReleases"> New Releases</a></li>
                                 <li><a href="../Code/listProducts.aspx?filter=Featured"> Featured</a></li>
                                 <li class="divider"></li>
-                                <li><a href="../Code/listProducts.aspx?filter=Ps4"> Playstation 4</a></li>
-                                <li><a href="../Code/listProducts.aspx?filter=XboxOne"> Xbox One</a></li>
-                                <li><a href="../Code/listProducts.aspx?filter=WiiU"> Wii U</a></li>
+                                <li><a href="../Code/listProducts.aspx?filter=Playstation 4"> Playstation 4</a></li>
+                                <li><a href="../Code/listProducts.aspx?filter=Xbox One"> Xbox One</a></li>
+                                <li><a href="../Code/listProducts.aspx?filter=Nintendo Wii U"> Nintendo Wii U</a></li>
+                                <li class="divider"></li>
+                                <li class="dropdown-submenu">
+                                    <a tabindex="-1" href="#">Categories</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="../Code/listProducts.aspx?filter=Action Adventure"> Action Adventure</a></li>
+                                        <li><a href="../Code/listProducts.aspx?filter=Fighting"> Fighting</a></li>
+                                        <li><a href="../Code/listProducts.aspx?filter=Racing"> Racing</a></li>
+                                        <li><a href="../Code/listProducts.aspx?filter=RPG"> RPG</a></li>
+                                        <li><a href="../Code/listProducts.aspx?filter=Shooters"> Shooters</a></li>
+                                        <li><a href="../Code/listProducts.aspx?filter=Family"> Family</a></li>
+                                    </ul>
+                                </li>
                             </ul>
                         </li>
                     </ul>
                     <div class="navbar-right">
                         <div class="navbar-form" role="search" id="navbar-menu">
-                            <asp:TextBox ID="txtSearrh" runat="server"  CssClass="form-control" Placeholder="Search for games" Width="400"></asp:TextBox>
-                            <asp:LinkButton ID="btnSearch" runat="server"  CssClass="btn btn-default">
+                            <asp:TextBox ID="txtSearch" runat="server"  CssClass="form-control" Placeholder="Search for games" Width="400" KeyDown="OnKeyDownHandler"></asp:TextBox>
+                            <asp:LinkButton ID="btnSearch" runat="server" CssClass="btn btn-default" OnClick="BtnSearch_Click">
                                 <span class="glyphicon glyphicon-search"> </span>
                             </asp:LinkButton>
                         </div>
@@ -60,7 +72,7 @@
                                     <li><a href="#"><span class="glyphicon glyphicon-usd"></span>  My Orders</a></li>
                                     <li><a href="../Code/settings.aspx"><span class="glyphicon glyphicon-wrench"></span>  Settings</a></li>
                                     <li><a href="../Code/about.aspx"><span class="glyphicon glyphicon-hand-up"></span>  About</a></li>
-                                    <li><a href="../Code/login.aspx"><span class="glyphicon glyphicon-log-out"></span>  Logout</a></li>
+                                    <!--<li><a href="../Code/login.aspx"><span class="glyphicon glyphicon-log-out"></span>  Logout</a></li>-->
                                 </ul>
                             </li>
                             <li><a href="#"><span class="glyphicon glyphicon-shopping-cart btn-lg"></span></a></li>
