--- a/Gameverse/Code/Site.Master
+++ b/Gameverse/Code/Site.Master
@@ -72,7 +72,7 @@
                                     <!--<li><a href="../Code/login.aspx"><span class="glyphicon glyphicon-log-out"></span>  Logout</a></li>-->
                                 </ul>
                             </li>
-                            <li><a href="#"><span class="glyphicon glyphicon-shopping-cart btn-lg"></span></a></li>
+                            <li><a href="myCart.aspx"><span class="glyphicon glyphicon-shopping-cart btn-lg"></span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                 <div class="col-md-4 text-center">
                     <h5>Links</h5>
                     <a href="index.aspx">Home</a><br />
-                    <a>Products</a><br/>
+                    <a href="listProducts.aspx">Products</a><br/>
                     <a href="about.aspx">About</a><br/>
                     <a href="contact.aspx">Contact</a>
                 </div>
