Hashed passwords, fixed typo, added disclaimer to master

--- a/Gameverse/Site.Master
+++ b/Gameverse/Site.Master
@@ -93,8 +93,8 @@
             <hr />
             <div class="row">
                 <div class="col-md-4">
-                    <h5>About</h5>
-                    <p>Lorem ipsum dolor sit amet, sea in dicat doctus nostrud, error impetus civibus cum an. Erat erant altera sed no. Est ei amet virtute petentium. Labitur volutpat consetetur eu ius, an falli disputationi duo. At integre sanctus eum, cu vel populo admodum.</p>
+                    <h5>Disclaimer</h5>
+                    <p>This site is for educational purposes only. Data transmitted may not be secure.</p>
                 </div>
                 <div class="col-md-4 text-center">
                     <h5>Links</h5>
