--- a/Gameverse/Assets/CSS/custom.css
+++ b/Gameverse/Assets/CSS/custom.css
@@ -52,8 +52,6 @@ th, td {
 }
 
 .jumbotron{
-    //background-size: cover;
-    //background-color: #DCE8EC;
     background-image: url(../Images/subtle.png);
     background-repeat: repeat;
     
@@ -137,4 +135,16 @@ th, td {
   border-bottom: 6px solid #ffffff;
   border-left: 6px solid transparent;
   content: '';
+}
+
+.table_titles {
+    font-size: 14px;
+}
+
+.table_cart tr {
+   border-bottom: 1px solid #ccc;
+}
+
+.table_cart tr th {
+   width: 140px;
 }
